--- a/src/Utilidades/Reportes/Rodal.jrxml
+++ b/src/Utilidades/Reportes/Rodal.jrxml
@@ -11,7 +11,8 @@
 		<![CDATA[SELECT *
 FROM
      "DSI"."T_INV_DETALLE_TABLARODAL" T_INV_DETALLE_TABLARODAL INNER JOIN "DSI"."T_INV_TABLARODAL" T_INV_TABLARODAL ON T_INV_DETALLE_TABLARODAL."CD_ORDEN_TRABAJO" = T_INV_TABLARODAL."CD_ORDEN_TRABAJO"
-WHERE T_INV_TABLARODAL."CD_ORDEN_TRABAJO" = $P{OrdenTrabajo}]]>
+WHERE T_INV_TABLARODAL."CD_ORDEN_TRABAJO" = $P{OrdenTrabajo}
+ORDER BY T_INV_DETALLE_TABLARODAL.CD_CLASE_DAP]]>
 	</queryString>
 	<field name="CD_ORDEN_TRABAJO" class="java.lang.String"/>
 	<field name="CD_CLASE_DAP" class="java.lang.String"/>
