--- a/src/Utilidades/Reportes/Parcela.jrxml
+++ b/src/Utilidades/Reportes/Parcela.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Parcela" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c32dfc79-448c-4718-b018-b871c0a5ae08">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="109"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.zoom" value="0.6830134553650705"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="149"/>
 	<style name="Column header" forecolor="#000000" isBlankWhenNull="true" fontName="Times New Roman" fontSize="12" isBold="false" isItalic="true" isUnderline="false" isStrikeThrough="false"/>
 	<style name="Subtitle" hAlign="Center" fontName="Times New Roman" fontSize="22" isBold="false" isItalic="true" isUnderline="false" isStrikeThrough="false"/>
 	<style name="Title" hAlign="Center" vAlign="Top" fontName="Times New Roman" fontSize="26" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
@@ -28,6 +28,7 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Desarrollo\\Desktop\\Reportes\\"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="Logo" class="java.io.InputStream"/>
 	<queryString>
 		<![CDATA[SELECT
      gen."EM_PROPIETARIA" AS gen_EM_PROPIETARIA,
@@ -75,7 +76,12 @@ WHERE
 	<field name="GEN_NM_ESPECIES" class="java.lang.String"/>
 	<field name="GEN_EM_DE_SERVICIOS" class="java.lang.String"/>
 	<background>
-		<band splitType="Stretch"/>
+		<band height="555" splitType="Stretch">
+			<image>
+				<reportElement x="315" y="515" width="175" height="39" uuid="b85ef376-36da-49bd-90f1-3d0163468aa8"/>
+				<imageExpression><![CDATA[$P{Logo}]]></imageExpression>
+			</image>
+		</band>
 	</background>
 	<title>
 		<band height="45" splitType="Stretch">
@@ -249,34 +255,42 @@ WHERE
 		<band height="23" splitType="Stretch">
 			<textField>
 				<reportElement style="Column header" x="16" y="3" width="63" height="20" uuid="fdeeec46-3624-4536-9518-3931ac78173f"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_CD_NM_PARCELA}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Column header" x="79" y="3" width="100" height="20" uuid="186c966d-f08d-4627-94dc-e776df5ecf00"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_SUPERFICIE}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Column header" x="179" y="3" width="100" height="20" uuid="26caf3bc-ae9e-48df-b1da-9f63e1888e36"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_DENSIDAD}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Column header" x="279" y="3" width="100" height="20" uuid="677a87af-4100-4013-891c-dc18679d203f"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_AREA_BASAL_MEDIA}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Column header" x="379" y="3" width="100" height="20" uuid="43fe9330-d489-403e-89c6-d7872190a93c"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_DAP_MEDIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Column header" x="479" y="0" width="100" height="20" uuid="ffd9ed24-153e-4e4b-a6d8-07736b649b45"/>
+				<reportElement style="Column header" x="479" y="3" width="100" height="20" uuid="ffd9ed24-153e-4e4b-a6d8-07736b649b45"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_ALTURA_DOMINANTE}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Column header" x="579" y="0" width="100" height="20" uuid="47166fd1-e9a6-4080-9afe-54d6871abb22"/>
+				<reportElement style="Column header" x="579" y="3" width="100" height="20" uuid="47166fd1-e9a6-4080-9afe-54d6871abb22"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_VOLUMEN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Column header" x="679" y="0" width="100" height="20" uuid="525f37b1-8273-4f64-b0bb-b3f7a0f1ac64"/>
+				<reportElement style="Column header" x="679" y="3" width="100" height="20" uuid="525f37b1-8273-4f64-b0bb-b3f7a0f1ac64"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DET_FACTOR_EXPANSION}]]></textFieldExpression>
 			</textField>
 		</band>
